vlib/v/parser/tests/division_by_zero_0b0_err.vv
fn main() {
	println(1/0b0)
}
